package org.example.CapaGestion;

public class GestionCatalogo {
}
