package modelOldDated.CapaEntidades;

public enum EstadoActivoFisico {
    NUEVO, USADO, REPARADO
}