package modelOldDated.CapaEntidades;

public enum EstadoSubasta {
    ACTIVA, FINALIZADA, EN_REVISION, CANCELADA
}