@startuml
skinparam DefaultFontName Arial
skinparam ClassBackgroundColor #E8F4F8
skinparam ClassBorderColor #2C3E50
skinparam noteBackgroundColor #FDEDEC
skinparam noteBorderColor #E74C3C
'skinparam linetype ortho

package "Capa de Entidades" {

    class Usuario {
        - idUsuario: String
        - nombre: String
        - correoElectronico: String
        - telefono: String
        - descripcionPersonal: String
        - reputacionHistorica: double
        - sancionActiva: boolean
        - fechaSancion: Date
        + Usuario(nombre: String, correo: String, telefono: String, imagen: Imagen)
        + recibirNotificacion(nuevaNotificacion: Notificacion): void
        + calcularReputacionHistorica(): void
        + calcularReputacionPorServicio(servicio: Servicio): double
        + crearOferta(oferta: Oferta, lineas: List<LineaBienConsumo>, imagenes: List<Imagen>): Oferta
        + obtenerHistorial(): Historial
    }

    class Monedero {
        - creditosDisponibles: int
        - creditosComprometidos: int
        + tieneSaldoSuficiente(monto: int): Boolean
        + retenerCreditosComprometidos(monto: int): void
        + Monedero()
    }

    class Habilidad {
        - nombre: String
        - precioCreditos: int
        - descripcionHabilidad: String
        + Habilidad(nombre: String, precioCreditos: int, descripcion: String)
    }

    class Necesidad {
        - nombre: String
        - descripcionNecesidad: String
        + Necesidad(nombre: String, descripcion: String)
    }

    class Imagen {
        - ruta: String
        - fechaSubida: Date
        + Imagen()
    }

    class SessionActual {
        - idUsuario: String
    }

    class Notificacion {
        - idNotificacion: String
        - mensaje: String
        - tipo: String
        - estadoLectura: boolean
        + marcarNotificacionLeida(): void
    }

    Usuario "1" *-- "1" Monedero
    Usuario "1" *-- "*" Habilidad
    Usuario "1" *-- "*" Necesidad
    Usuario "1" *-- "1" Imagen
    Usuario "1" -- "*" Notificacion : posee >
    SessionActual ..> Usuario
}

package "Módulo de Intercambios y Transacciones" {

    class MuroPublicaciones {
        + obtenerPublicaciones(): Void
        + filtrarPublicaciones(): Void
    }

    class SolicitudIntercambio {
        - idSolicitudIntercambio: String
        - fechaEmision: Date
        - nombreServicio: String
        - precioCreditos: int
        - descripcion: String
        - estado: String
        + notificarContraparte(): Void
        + verificarExpiracion(fechaActual: Date): Boolean
        + rechazar(idIntercambio): Void
        + actualizarEstado(estado: String): Void
    }

    class Transaccion {
        - idTransaccion: String
        - idOfertante: String
        - idDemandante: String
        - estado: String
        - creditosRetenidos: double
        - confirmacionOfertante: Boolean
        - confirmacionDemandante: Boolean
        + actualizarEstado(nuevoEstado: String): void
        + Transaccion()
    }

    class Servicio {
        - idServicio: String
        - nombreServicio: String
        - descripcion: String
        - categoria: String
        - calificacion: int
        + Servicio(nombre: String, descripcion: String)
    }

    MuroPublicaciones --> Usuario : consulta listas de >
    SolicitudIntercambio --> "1" Usuario : recibe >
    SolicitudIntercambio --> "1" Usuario : solicita >
    SolicitudIntercambio --> "0" Necesidad : responde a >
    SolicitudIntercambio --> "0" Habilidad : solicita >
    SolicitudIntercambio "0..*" --> "1" Transaccion : genera >
    Transaccion "1" *-- "1" Servicio
    Transaccion "*" -- "1" Usuario : Demanda <
    Transaccion "*" -- "1" Usuario : Ofrece <
}

package "Módulo de Subastas" {

    enum EstadoActivoFisico {
        NUEVO
        USADO
        REPARADO
    }

    enum EstadoSubasta {
        ACTIVA
        FINALIZADA
        EN_REVISION
        CANCELADA
    }

    class Subasta {
        - idSubasta: String
        - titulo: String
        - descripcion: String
        - fechaCreacion: Date
        - fechaFinalizacion: Date
        - estado: EstadoSubasta
        - plazoResolucionExpirado: Boolean
        - propietarioId: String
        + verificarCierreSubasta(fecha: Date): Boolean
        + verificarExpiracionResolucion(fecha: Date): Boolean
        + enviarEstadoSubasta(): boolean
        + cerrarPorVencimiento(): void
        + adjudicar(ofertaGanadora: Oferta): void
        + cancelarSubasta(): void
    }

    class ActivoFisico {
        - nombre: String
        - estadoFisico: EstadoActivoFisico
    }

    class Oferta {
        - fechaOferta: Date
        - estadoOferta: String
        - esGanadora: Boolean
        + agregarLinea(bien: BienConsumo, cantidad: int): void
        + eliminarLinea(bienId: String): void
        + calcularValorEstimado(): double
    }

    class LineaBienConsumo {
        - bienConsumoId: String
        - cantidad: int
        + validarCantidad(): boolean
    }

    class BienConsumo {
        - nombre: String
        - descripcion: String
        - categoria: String
    }

    class Historial {
        - ofertas: List<Oferta>
        + agregarOferta(oferta: Oferta): void
        + obtenerOferta(): List<Oferta>
    }

    Usuario "1" --> "1" Historial : tiene >
    Usuario "1" o-- "0..*" Oferta
    Usuario o-- Subasta : subastador
    Subasta "1" --> "0..*" Oferta : recibe >
    Subasta "1" *-- "1" ActivoFisico : contiene >
    Oferta "1" *-- "1..*" LineaBienConsumo : contiene >
    Oferta "1" --> "1" Imagen : posee evidencia >
    LineaBienConsumo "1" --> "1" BienConsumo : referencia >
    ActivoFisico o-- Imagen
}

package "Capa de Gestión" {

    class GestorUsuario {
        + registrarUsuario(nombre: String, correo: String, telefono: String, foto: String): Void
        + calcularReputacionHistorica(idUsuario: String): Void
        + calcularReputacionServicio(idUsuario: String, nombreServicio: String, calificacion: int): Void
        + buscarUsuario(idUsuario: String): Usuario
        + modificarDatosUsuario(idUsuario: String): Void
    }

    class GestionCatalogo {
        - Habilidades: List<String>
        - Necesidades: List<String>
        + registrarHabilidad(nombre: String, precio: int, descripcion: String): Void
        + registrarNecesidad(nombre: String, descripcion: String): Void
    }

    class GestorTransaccion {
        + registrarTransaccion(idOfertante: String, idDemandante: String, nombreServicio: String): Void
        + iniciarTransaccion(demandante: Usuario, prestador: Usuario, servicio: Servicio): Transaccion
        + buscarTransaccion(idTransaccion: String): Transaccion
        + actualizarEstado(estado: String): Void
        + actualizarConfirmacionServicio(usuario: Usuario): Void
        + confirmarServicioExitoso(idTransaccion: String): void
        + retenerCreditos(): void
        + liberarCreditos(): void
        + calificarServicio(idPrestador: String, estrellas: int): void
        + enviarNotificacion(destinatario: Usuario, mensaje: String, tipo: String): void
    }

    class GestorSubasta {
        + SolicitarCrearSubasta(fechaCreacion: Date, fechaFin: Date, estado: EstadoSubasta, expirado: Boolean): void
        + cancelarSubasta(): void
        + adjudicarGanador(ofertaGanadora: Oferta): void
    }

    GestorUsuario ..> Usuario
    GestionCatalogo ..> Habilidad
    GestionCatalogo ..> Necesidad
    GestorTransaccion ..> Transaccion
    GestorTransaccion ..> SolicitudIntercambio
    GestorSubasta ..> Subasta
}

package "Capa de Persistencia" {

    interface Persistencia {
        + cargar(): List<Object>
        + guardar(datos: List<Object>): void
    }

    class PersistenciaUsuario {
        - RUTA_ARCHIVO: String = "data/usuarios.json"
        + cargar(): List<Usuario>
        + guardar(datos: List<Usuario>): void
    }

    class PersistenciaTransacciones {
        - RUTA_ARCHIVO: String = "data/transacciones.json"
        + cargar(): List<Transaccion>
        + guardar(datos: List<Transaccion>): void
    }

    class PersistenciaSubasta {
        - rutaArchivo: String = "data/subasta.JSON"
        + cargar(): List<Subasta>
        + guardar(datos: List<Subasta>): void
    }

    class PersistenciaCatalogo {
        + cargar(): List<Object>
        + guardar(datos: List<Object>): void
    }

    class ArchivoJSONGlobal {
        + cargarPersistencia(): boolean
        + guardarPersistencia(): boolean
        + cargarHistorial(usuario: Usuario): void
        + guardarHistorial(historial: Historial, usuario: Usuario): void
        + actualizarUsuario(usuario: Usuario): void
        + actualizarOferta(oferta: Oferta, usuario: Usuario): void
    }

    PersistenciaUsuario .up.|> Persistencia
    PersistenciaTransacciones .up.|> Persistencia
    PersistenciaSubasta .up.|> Persistencia
    PersistenciaCatalogo .up.|> Persistencia
    ArchivoJSONGlobal .up.|> Persistencia
}

@enduml